test/types/records/split-init/error-never-initialized-values-global2.good
error-never-initialized-values-global2.chpl:3: error: Cannot default-initialize bb: borrowed C
note: non-nil class types do not support default initialization
note: Consider using the type borrowed C? instead
