test/types/records/split-init/error-never-initialized-values-global2.chpl
class C { }

var bb: borrowed C;
